--- a/quickshell/translations/poexports/pl.json
+++ b/quickshell/translations/poexports/pl.json
@@ -2089,6 +2089,9 @@
   "Format Legend": {
     "Format Legend": "Legenda formatowania"
   },
+  "Free VRAM/memory when the launcher is closed. May cause a slight delay when reopening.": {
+    "Free VRAM/memory when the launcher is closed. May cause a slight delay when reopening.": ""
+  },
   "Frequency": {
     "Frequency": "Częstotliwość"
   },
@@ -4988,6 +4991,9 @@
   },
   "Unknown Title": {
     "Unknown Title": ""
+  },
+  "Unload on Close": {
+    "Unload on Close": ""
   },
   "Unnamed Rule": {
     "Unnamed Rule": ""
