Squashed commit of the following:
commit 051b7576f7ed31bbfbc58620e2eadfee41dbbac3
Author: purian23 <purian23@gmail.com>
Date:   Sun Feb 15 16:38:45 2026 -0500

    Height for realz

commit 7784488a61a3a66e03ea2b387ca1e9da2f5e02fd
Author: purian23 <purian23@gmail.com>
Date:   Sun Feb 15 16:34:09 2026 -0500

    Fix height and truncate text/URLs

commit 31b328d428b6cb1266aeb890eef052f003379a32
Author: bbedward <bbedward@gmail.com>
Date:   Sun Feb 15 16:25:57 2026 -0500

    notifications: handle URL encoding in markdown2html

commit dbb04f74a2ab52751f48bd851e74a79a3549c68a
Author: bbedward <bbedward@gmail.com>
Date:   Sun Feb 15 16:10:20 2026 -0500

    notifications: more comprehensive decoder

commit b29c7192c2b27d8b3e01a08dbad7656029abf673
Author: bbedward <bbedward@gmail.com>
Date:   Sun Feb 15 15:51:37 2026 -0500

    notifications: html unescape

commit 8a48fa11ecfffa6588807a736c897d247167b3cc
Author: purian23 <purian23@gmail.com>
Date:   Sun Feb 15 15:04:33 2026 -0500

    Add expressive curve on init toast

commit ee124f5e04f39435b7c8cbaabc82f89a689a3847
Author: purian23 <purian23@gmail.com>
Date:   Sun Feb 15 15:02:16 2026 -0500

    Expressive curves on swipe & btn height

commit 0fce90463567be6b01c4a316bc489baffdaa4602
Author: purian23 <purian23@gmail.com>
Date:   Sun Feb 15 13:40:02 2026 -0500

    Provide bottom button clearance

commit 00d3829999492ab1b698a0d6c3079e53f510f725
Author: bbedward <bbedward@gmail.com>
Date:   Sun Feb 15 13:24:31 2026 -0500

    notifications: cleanup popup display logic

commit fd05768059db8abda8a33ae8f47caf962c6aefaa
Author: purian23 <purian23@gmail.com>
Date:   Sun Feb 15 01:00:55 2026 -0500

    Add Privacy Mode
    - Smoother notification expansions
    - Shadow & Privacy Toggles

commit 0dba11d845871eeaa969571e6bede56f984655c7
Author: purian23 <purian23@gmail.com>
Date:   Sat Feb 14 22:48:46 2026 -0500

    Further M3 enhancements

commit 949c216964b87c1ae265854ef1886b5b4990fd0d
Author: purian23 <purian23@gmail.com>
Date

--- a/quickshell/translations/settings_search_index.json
+++ b/quickshell/translations/settings_search_index.json
@@ -4678,6 +4678,50 @@
     "description": "Use smaller notification cards"
   },
   {
+    "section": "notificationAnimationSpeed",
+    "label": "Animation Speed",
+    "tabIndex": 17,
+    "category": "Notifications",
+    "keywords": [
+      "alert",
+      "animate",
+      "animation",
+      "duration",
+      "fast",
+      "messages",
+      "motion",
+      "notif",
+      "notification",
+      "notifications",
+      "popup",
+      "speed",
+      "toast"
+    ],
+    "description": "Control animation duration for notification popups and history"
+  },
+  {
+    "section": "notificationCustomAnimationDuration",
+    "label": "Animation Duration",
+    "tabIndex": 17,
+    "category": "Notifications",
+    "keywords": [
+      "alert",
+      "animate",
+      "animation",
+      "custom",
+      "duration",
+      "messages",
+      "ms",
+      "notif",
+      "notification",
+      "notifications",
+      "popup",
+      "speed",
+      "toast"
+    ],
+    "description": "Base duration for notification animations"
+  },
+  {
     "section": "notificationHistorySaveCritical",
     "label": "Critical Priority",
     "tabIndex": 17,
